--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -20,29 +20,29 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-xl">
-        <a class="navbar-brand" href="#">E-cop</a>
-        
-        <div class="collapse navbar-collapse justify-content-end" id="navbarsExample07XL">
-
-            <ul class="navbar-nav">
-                <li class="nav-item active mr-4">
-                  <a class="nav-link" href="../index.html">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item mr-4">
-                  <a class="nav-link" href="#">Courses</a>
-                </li>
-                <li class="nav-item mr-4">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item mr-4">
-                  <a class="btn btn-primary" href="#">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="btn btn-secondary" href="#">Sign Up</a>
-                </li>                          
-              </ul>
-              
+        <img src="../image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarsExample07XL"
+        >
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html"
+                >Home <span class="sr-only"></span
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+          </ul>
+          <div class="ml-4">
+            <a class="btn btn-primary" href="#">Login</a> 
+            <a class="btn btn-secondary" href="#">Sign Up</a>
           </div>
+        </div>
       </div>
     </nav>
   </body>
