--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../includes/css.css">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -18,9 +19,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
       <div class="container-xl">
-        <img src="../image/logo.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
+        <img src="../image/logo_alt.png" width="100" height="100" class="d-inline-block align-top" alt="Logo">
         <div
           class="collapse navbar-collapse justify-content-end"
           id="navbarsExample07XL"
