--- a/includes/Style.css
+++ b/includes/Style.css
@@ -1,6 +1,8 @@
+/* navbar */
 .bg-blue {
     background-color: #0067ce; /* หรือใส่สีน้ำเงินฟ้าที่คุณต้องการ */
   }
   nav {
     font-family: 'Noto Sans Thai', sans-serif;
   }
+  /* ปิด Navbar */
