--- a/includes/Style.css
+++ b/includes/Style.css
@@ -127,18 +127,32 @@ nav ul li a {
  color: #fff;
  text-decoration: none;
 }
-.btn_nav{
+.btn_nav_log{
  display: flex;
  align-items: center;
  padding: 10px 20px;
  border: 0;
  outline: 0;
- border-radius: 5px;
- background: #f5168d;
- color: #fff;
+ border-radius: 80px;
+ background: #ffffff;
+ color: #000000;
  font-weight: 500;
  cursor:  pointer;
+ margin-right: 10px;
 }
+.btn_nav_sing{
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border: 0;
+  outline: 0;
+  border-radius: 80px;
+  background: rgba(255, 255, 255, 0.30);
+  color: #ffffff;
+  font-weight: 500;
+  cursor:  pointer;
+  
+ }
 
 .content{
  margin-top: 14%;
