--- a/includes/Style.css
+++ b/includes/Style.css
@@ -1,146 +1,66 @@
-/*card2อันล่าง*/
-
-
-.vgr-cards {
-  .card {
-    display: flex;
-    flex-flow: wrap;
-    flex: 100%;
-    margin-bottom: 40px;
-
-    &:nth-child(even) .card-img-body {
-      order: 1; /* สลับลำดับของ .card-img-body และ .card-body ในลำดับคู่ */
-    }
-
-    &:nth-child(even) .card-body {
-      padding-left: 1.25rem; /* ปรับ padding-left ให้ข้อความของ .card-body ในลำดับคู่ */
-      padding-right: 0; /* ปรับ padding-right ให้ข้อความของ .card-body ในลำดับคู่ */
-    }
-
-    @media (max-width: 576px) {
-      display: block;
-    }
-  }
-
-  .card-img-body {
-    flex: 1;
-    overflow: hidden;
-    position: relative;
-
-    @media (max-width: 576px) {
-      width: 100%;
-      height: 200px;
-      margin-bottom: 20px;
-    }
-  }
-
-  .card-img {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    margin-left: 50%;
-    transform: translateX(-50%);
-
-    @media (max-width: 1140px) {
-      margin: 0;
-      transform: none;
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  .card-body {
-    flex: 2;
-    padding: 0 1.25rem 0 0; /* ปรับ padding-right ให้ข้อความของ .card-body */
-    
-    @media (max-width: 576px) {
-      padding: 0;
-    }
-  }
-}
-.card-img-body {
-  margin-right: 20px; /* ปรับระยะห่างระหว่าง .card-img-body กับ .card-body */
-}
-
-/* หรือใช้ padding ก็ได้ */
-.card-img-body {
-  padding-right: 20px; /* ปรับระยะห่างระหว่าง .card-img-body กับ .card-body */
-}
-
-
-/*card 2 อันบน*/
-.w3-card {
-  display: inline-block;
-  background-color: ghostwhite;
-  min-width: 50px;
-  margin-right: 100px; /* ปรับระยะห่างระหว่าง .w3-card */
-  transition: transform 0.3s ease-in-out; /* เพื่อทำให้มี animation เมื่อขนาดเล็กลง */
-}
-
-.w3-card:hover {
-  transform: scale(0.8); /* ปรับขนาดลงเมื่อ hover */
-}
-
-.w3-gray {
-  text-align: center;
-}
-
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family:'Noto Sans Thai', sans-serif ;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
-.containner{
- width: 100%;
- min-height: 100vh;
- background-image: linear-gradient(rgba(9,0,77,0.65),rgba(9,0,77,0.65)), url(../image/background.png);
- background-size: cover;
- background-position: center;
- padding: 10px 8%;
-}
-nav {
- width: 100%;
- display: flex;
- align-items:center ;
- justify-content: space-between;
- padding: 10px 0;
+
+.containner {
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)), url(../image/background.png);
+  background-size: cover;
+  background-position: center;
+  /* border-bottom-left-radius: 25% ;
+ border-bottom-right-radius: 25%;  */
+  padding: 10px 8%;
 }
 
-.logo
-{
- width: 180px;
- cursor: pointer; 
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.logo {
+  width: 180px;
+  cursor: pointer;
 }
 
 nav ul {
- list-style: none;
- width: 100%;
- text-align: right;
- padding-right: 60px;
+  list-style: none;
+  width: 100%;
+  text-align: right;
+  padding-right: 60px;
 }
+
 nav ul li {
- display: inline-block;
- margin: 10px 20px;
+  display: inline-block;
+  margin: 10px 20px;
 }
+
 nav ul li a {
- color: #fff;
- text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
-.btn_nav_log{
- display: flex;
- align-items: center;
- padding: 10px 20px;
- border: 0;
- outline: 0;
- border-radius: 80px;
- background: #ffffff;
- color: #000000;
- font-weight: 500;
- cursor:  pointer;
- margin-right: 10px;
+
+.btn_nav_log {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border: 0;
+  outline: 0;
+  border-radius: 80px;
+  background: #ffffff;
+  color: #000000;
+  font-weight: 500;
+  cursor: pointer;
+  margin-right: 10px;
 }
-.btn_nav_sing{
+
+.btn_nav_sing {
   display: flex;
   align-items: center;
   padding: 10px 20px;
@@ -150,26 +70,100 @@ nav ul li a {
   background: rgba(255, 255, 255, 0.30);
   color: #ffffff;
   font-weight: 500;
-  cursor:  pointer;
-  
- }
+  cursor: pointer;
 
-.content{
- margin-top: 14%;
- color: #fff;
- max-width: 620px;
 }
 
-.content h1{
- font-size:  70px;
- font-weight: 600;
- line-height: 85px;
- margin-bottom: 25px;
+.content {
+  margin-top: 14%;
+  color: #fff;
+  max-width: 620px;
 }
+
+.content h1 {
+  font-size: 70px;
+  font-weight: 600;
+  line-height: 85px;
+  margin-bottom: 25px;
+}
+
 .fa-newspaper-o {
   position: static;
 }
+
 .fa-university {
   position: absolute;
   right: 30%;
+}
+
+/* cards */
+
+#newstitle {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+#newstitle h1 {
+  font-weight: 700;
+  font-size: 36px;
+}
+
+#newstitle p {
+  color: #696984;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+#newscard {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  /* width: 100rem; */
+  height: 30rem;
+  /* border: 1px solid red; */
+}
+
+#newscard .card {
+  margin: 2rem 5rem 5rem 5rem;
+  padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70%;
+  text-align: center;
+  border-radius: 20px;
+  background: #FFF;
+  box-shadow: 0px 10px 60px 0px rgba(38, 45, 118, 0.08);
+  border-style: none;
+  /* border: 1px solid red; */
+
+}
+
+#newscard .card:hover {
+  transform: scale(1.1, 1.1);
+  transition: all 0.5s ease-out;
+}
+#newscard .card .icon {
+  width: 5rem ;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #5B72EE;
+  border-radius: 100%;
+  /* border: 1px solid red; */
+}
+
+
+#newscard .card .card-body {
+  margin-top: 1rem;
+}
+
+#newscard .card .card-body h5 {
+  color: #2F327D;
+  margin-bottom: 1rem;
+}
+
+#newscard .card .card-body p {
+  color: #696984;
 }
