--- a/includes/footer.html
+++ b/includes/footer.html
@@ -138,7 +138,7 @@
         <div class="container-fluid" id="background_footer">
             <div class="row" id="row_footer">
                 <div class="col-md-3 border-end" id="col_footer">
-                    <img src="logo.png" alt="" height="100">
+                    <img src="../image/logo.png" alt="" height="100">
                 </div>
                 <div class="col-md-3" id="col2_footer">
                     <h1>Virtual Class</h1>
