--- a/includes/Style.css
+++ b/includes/Style.css
@@ -167,3 +167,102 @@ nav ul li a {
 #newscard .card .card-body p {
   color: #696984;
 }
+
+
+/*CSS AUTO*/
+
+.what-is-TOTC {
+  text-align: center;
+  background-color: white;
+}
+.div {
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  font-size: 44px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 79.2px;
+  white-space: nowrap;
+}
+
+.overlap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img {
+  object-fit: cover;
+  position: relative;
+  z-index: 1;
+}
+.overlap-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-wrapper {
+  font-family: "Poppins-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.48px;
+  line-height: 1.5; /* ปรับ line-height ตามความต้องการ */
+  max-width: 600px;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: pre-line;
+  display: block;
+}
+
+.text-wrapper-2 {
+  font-family: "Poppins-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 18px;
+  text-align: center;
+  letter-spacing: 0.48px;
+  line-height: 32px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/*Read more*/
+
+.image-container {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 20px;
+ 
+}
+.read-more-button {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #3498db;
+  color: #ffffff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 2; /* ตั้งค่า z-index เพื่อให้ปุ่มอยู่ด้านบนของรูปภาพ */
+}
+
+.image-container:hover .read-more-button {
+  opacity: 1;
+}
+
+/*container-new แยกจากของเพื่อน เพื่อไม่ให้ดึง BG อันบนมาด้วย*/
+.containner-new {
+  width: 100%;
+  min-height: 100vh;
+ 
+  background-size: cover;
+  background-position: center;
+  padding: 10px 8%;
+}
