--- a/stylepage2.css
+++ b/stylepage2.css
@@ -2,31 +2,34 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Sans Thai', sans-serif;
 }
 
- #maincontent{
+#maincontent {
     background-color: rgb(180, 209, 253);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 40rem;
 }
-#rowtext{
+
+#rowtext {
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 30rem;
-    
+
 }
-#rowimg img{
+
+#rowimg img {
     border-radius: 2rem;
 }
-#maincontent .row{
+
+#maincontent .row {
     /* border: 1px solid red; */
-    width:50%;
+    width: 50%;
 }
 
 /* styletext */
@@ -64,5 +67,102 @@
     font-size: 16px;
     font-weight: 700;
 
-} 
+}
 
+/* readingblog */
+
+#readblog {
+    /* border: 1px solid red; */
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#maintext {
+    /* border: 1px solid rgb(30, 255, 0); */
+    margin-top: 1rem;
+}
+#maintext h1{
+    /* border: 1px solid rgb(30, 255, 0); */
+    margin-top: 1rem;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#readblog .row {
+    width: 90%;
+    /* margin-top: 1rem; */
+}
+
+#mainblog {
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+}
+
+#mainblog .col-md3 {
+    margin-bottom: 1rem;
+    border-radius: 20px;
+    /* border: 1px solid red; */
+    width: 350px;
+    height: 320px;
+}
+
+#mainblog #blog1 {
+    background-image: url("./image/blog1.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#mainblog .blogname{
+    /* border: 1px solid red; */
+    border-radius: 15px;
+    width: 14rem;
+    height: 4rem;
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    
+}
+#mainblog .blogname h1{
+    padding-top: 10px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#mainblog #blog2 {
+    background-image: url("./image/blog2.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#mainblog #blog3 {
+    background-image: url("./image/blog3.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#mainblog #blog4 {
+    background-image: url("./image/blog4.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
