--- a/stylepage2.css
+++ b/stylepage2.css
@@ -100,6 +100,13 @@
     justify-content: space-between;
     /* border: 1px solid red; */
 }
+#mainblog a{
+    width: auto;
+    text-decoration: none;
+    color: #000000;
+    /* border: 1px solid red; */
+
+}
 
 #mainblog .col-md3 {
     margin-bottom: 1rem;
@@ -117,6 +124,10 @@
     display: flex;
     justify-content: center;
     align-items: end;
+}
+#mainblog a :hover {
+    transform: scale(1.05, 1.05);
+    transition: all 0.2s ease-out;
 }
 
 #mainblog .blogname{
@@ -136,6 +147,7 @@
     font-size: 24px;
     font-weight: bold;
 }
+
 
 #mainblog #blog2 {
     background-image: url("./image/blog2.jpg");
