--- a/stylepage3.css
+++ b/stylepage3.css
@@ -325,7 +325,7 @@
     height: 382px;
     top: 0;
     left: 0;
-    background-image: url(./img/rectangle-87.webp);
+    background-image: url(./image/rectangle-87.webp);
     background-size: cover;
     background-position: 50% 50%;
 }
@@ -416,7 +416,7 @@
     left: 57px;
     background-color: #d9d9d9;
     border-radius: 60px;
-    background-image: url(./img/rectangle-86.webp);
+    background-image: url(./image/rectangle-86.webp);
     background-size: 100% 100%;
 }
 
@@ -447,7 +447,7 @@
     height: 392px;
     top: 0;
     left: 0;
-    background-image: url(./img/rectangle-86.webp);
+    background-image: url(./image/rectangle-86.webp);
     background-size: cover;
     background-position: 50% 50%;
 }
@@ -511,7 +511,7 @@
     left: 57px;
     background-color: #d9d9d9;
     border-radius: 60px;
-    background-image: url(./img/rectangle-86.webp);
+    background-image: url(./image/rectangle-86.webp);
     background-size: 100% 100%;
 }
 
